native/tact.h

/* Contact manifold capacity per cpair. Currently the narrowphase still returns 1
 * point per pair (sub_id always 0), so slots 1..3 are unused. Phase 2+: box-box
 * SAT/clipping narrowphase will fill 0..MAX_PTS_PER_PAIR-1. Cost: lam_prev buffer
 * and LCP A workspace scale as MAX_PTS² in the worst case (currently dominated by
 * other terms since most slots stay empty). Indexing convention: warm-start slot =
 * cpair_idx * MAX_PTS_PER_PAIR + sub_id. */
#define MAX_PTS_PER_PAIR 4
/* shape type codes (collision) — kept in sync with sim.py (YAML loader) + _clib.py */
#define MESH    100
#define BOX     101
#define SPHERE  102
#define CYL     103
#define CAPSULE 104
#define HFIELD  105   /* height field — regular grid of heights, non-convex terrain */
/* =============================================================================
 * narrow.c (dispatch + analytic detectors) / box_box.c (box-box SAT+clipping) /
 * mpr.c (convex fallback) / ray.c (ray casts) / shape.c (mesh + hfield slot
 * storage) — collision side
 * ============================================================================= */

/* Multi-point collision detection.
 *
 * Output buffer `out` carries up to `max_pts` contact points, each laid out as
 * 7 consecutive doubles:
 *   out[7*k + 0..2]  contact point in world coords
 *   out[7*k + 3..5]  depth vector  =  n_hat * depth (world; direction by which
 *                                     param1's body is pushed apart from param2)
 *   out[7*k + 6]     depth scalar (≥ 0)
 *
 * Return value:
 *   ≥ 0 : number of contact points written (0 = colliding but no points met
 *         the depth threshold, ≥ 1 = active contacts).
 *   < 0 : separating axis found / no overlap; `out` not modified.
 *
 * Dispatch (current implementation):
 *   - box-box pairs:  box_box_manifold() — SAT + face clipping, up to max_pts pts.
 *   - all other type combinations: existing MPR (single point), wrapped to return
 *     n_pts = 1 (depth > 0) or n_pts = 0 (touching, no penetration). */
int  collision_check(int type1, double *param1, int type2, double *param2,
                     double *out, int max_pts);
/* Single-point MPR fallback (mpr.c) — used by collision_check for convex pairs
 * with no dedicated detector. out[0..6] = [point, normal, depth]; returns intersect. */
int  collision_check_mpr(int type1, double *param1, int type2, double *param2, double *out);
/* box_box.c — SAT + face-clipping manifold for two BOX shapes.
 * Same return / out-layout convention as collision_check.
 *
 * Half-extents in param[6..8], position in param[0..2], extrinsic-xyz Euler in
 * param[3..5]. Up to min(max_pts, MAX_PTS_PER_PAIR) contact points returned,
 * sub-id'd 0..n-1 by polar angle around manifold centroid in tangent plane. */
int  box_box_manifold(const double *param1, const double *param2,
                      double *out, int max_pts);
/* Register the filesystem path for mesh slot `idx`. Called from Python's
 * Model.build() after tact_create() so subsequent collision/render mesh
 * loads know which `.obj` file to read. Path must be readable from the
 * process's current working directory or absolute. */
void set_mesh_path(int idx, const char* path);
/* Register a height-field grid into slot `slot`. Called from Python's Model.build()
 * (analogous to set_mesh_path, but the grid is pushed directly rather than read from a
 * file C-side). `data` is nrow*ncol heights in meters, row-major: data[i*ncol + j] is
 * the height at grid node (row i along local +Y, col j along local +X). The grid spans
 * local [-sx, sx] × [-sy, sy]. Copies the data; safe to free `data` after the call. */
void set_hfield_data(int slot, int nrow, int ncol, double sx, double sy, const double* data);
/* =============================================================================
 * tact.c — high-level handle API (orchestrates ccd + rbd, owns per-instance state)
 * Build / runtime split + lifecycle invariants: see docs/design-c-state.md §3.
 * ============================================================================= */
typedef struct tact_t tact_t;
tact_t *tact_create(int nb, int *parent, int *jtype,
                    double *X, double *I6, double *Ti, double *ff, double *sk,
                    double *floss, double *armature, double *jnt_lo, double *jnt_hi,
                    double *g, double dt, int integrator,
                    int n_shape, int n_pair,
                    int *ctype, int *cbody, double *cshape, double *ctran, double *cparam,
                    int *craycast, int *cpair,
                    double erp, double slop, double cfm_scale,
                    double v_rest_thresh, int iters, double tol);
void    tact_destroy(tact_t *h);
void    tact_set_feedback(tact_t *h,
                          int n_feeds, int *kinds, int *offsets, int *idx,
                          int n_frames, int *fbody, double *ftran, double *ftran_inv,
                          int y_size);
/* In-place updates that preserve the arena → tact_get_* views stay valid.
 * Topology (nb / n_shape / n_pair) must be unchanged; for topology changes,
 * destroy + create a fresh handle. */
void    tact_edit_model (tact_t *h, double *X, double *I6, double *Ti);
/* hot path — self-contained: _fk → contact solve → integrate → feedback.
 * tact_step_lcp: Kp_j/Kd_j/q_ref/qd_ref are optional joint-space implicit PD inputs
 * (all length nb, NULL = inactive — bit-identical to pre-PD behavior). See
 * aba_featherstone's contract for semantics. */
/* lam_in / lam_out: explicit LCP warm-start carry (NULL → internal h->lam_prev).
 * Caller-supplied buffers, length 6*MAX_PTS_PER_PAIR*n_pair. lam_in is read-only
 * (seeds lam_out); pass distinct buffers for a pure, immutable-input step.
 * lam_fric_in / lam_fric_out: joint-friction warm-start carry, same contract,
 * length nq (NULL → internal h->lam_fric_prev). lam_limit_in / lam_limit_out: joint-
 * limit warm-start carry, same contract, length nq (NULL → internal h->lam_limit_prev). */
void    tact_step_lcp    (tact_t *h, double *q, double *qd, double *tau,
                          double *Kp_j, double *Kd_j, double *q_ref, double *qd_ref,
                          double *lam_in, double *lam_out,
                          double *lam_fric_in, double *lam_fric_out,
                          double *lam_limit_in, double *lam_limit_out);
/* multi-frame query API — caller resolves names→indices once; mode[k]: 0=3d, 1=6d */
void    tact_fk_query     (tact_t *h, double *q, int n, int *frame_idx, int *mode, const char *eulerseq, double *out);
void    tact_error_query  (tact_t *h, double *q, double *x_d, int n, int *frame_idx, int *mode, const char *eulerseq, double *out);
void    tact_jacob_query  (tact_t *h, double *q, int n, int *frame_idx, int *mode, double *J_out);
/* tact_com_jacob_query: 3 × nq CoM linear Jacobian at q.
 * m_in (nb) and c_in (3*nb row-major) are body masses and body-frame CoM offsets
 * — passed in because tact_t holds only the 6×6 spatial inertia I6, not the
 * raw (m_i, c_i) tuples. Algorithm mirrors Python's com_jacob_lagrange: mass-
 * weighted average of per-body world-linear Jacobians (top 3 rows of
 * jacob_whitney evaluated at each body's world-frame CoM point). */
void    tact_com_jacob_query(tact_t *h, double *q, double *m_in, double *c_in, double *J_out);
/* tact_com_query: 3-vector CoM world position. Same (m_in, c_in) inputs as
 * tact_com_jacob_query for the same reason — tact_t lacks the raw (m_i, c_i). */
void    tact_com_query    (tact_t *h, double *q, double *m_in, double *c_in, double *r_out);
void    tact_gravity_query(tact_t *h, double *q, double *g_override, double *b_out);
/* tact_inertia_query: joint-space mass matrix at q. H_out is row-major (nq*nq). */
void    tact_inertia_query(tact_t *h, double *q, double *H_out);
/* tact_bias_query: C(q,qd)·qd + g(q) − Jᵀf_ext. f_ext_in NULL → treated as zero. */
void    tact_bias_query   (tact_t *h, double *q, double *qd, double *f_ext_in, double *b_out);
/* Damped Least Squares IK. q_in/q_out are nq-length per-DoF vectors (fixed joints
 * contribute 0 slots so no extend/compress is needed by the caller).
 * Returns iter count if converged (|e|<tolerance), -iter count if max_iter hit. */
int     tact_ik2_query    (tact_t *h, double *q_in, double *x_d,
                           int n, int *frame_idx, int *mode, const char *eulerseq,
                           double advance, double tolerance, double damping, int max_iter,
                           double *q_out);
/* Raycast: single ray vs all collision shapes. Returns forward t (>0) or -1. */
double  tact_raycast_query(tact_t *h, double *q, double *R0, double *Rd);
/* Raymap: depth image from a camera frame. dth = degrees per pixel (horizontal).
 * projection: 0 = angular (LiDAR-like, equirectangular), 1 = pinhole (rectilinear).
 * perpendicular: 1 = multiply hit distance by cos factor → camera-Z depth (planes
 * stay flat); 0 = raw range along ray. D_out row-major (height, width). */
void    tact_raymap_query (tact_t *h, double *q, int frame_idx,
                           int width, int height, double dth,
                           int projection, int perpendicular,
                           double *D_out);
double *tact_get_q_next  (tact_t *h);
double *tact_get_qd_next (tact_t *h);
double *tact_get_y       (tact_t *h);